<resources>
    <string name="app_name">E-Shopper</string>
    <string name="facebook_app_id">3831672383606262</string>
    <string name="fb_login_protocol_scheme">fb3831672383606262</string>

    <string name="home">الصفحة الرئيسية</string>
    <string name="Basket">السلة</string>
    <string name="Favourite">الاشعارات</string>
    <string name="MyAccount">حسابي</string>
    <string name="Categories">فئات</string>
    <string name="search_product">البحث عن طريق العنوان</string>
    <string name="search">بحث</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="email">بريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_password">هل نسيت كلمة السر</string>
    <string name="register">تسجيل</string>
    <string name="forget_your_password">نسيت كلمة المرور؟</string>
    <string name="there_is_no_items">لا توجد عناصر</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="size_chart">Size Chart</string>
    <string name="details">تفاصيل</string>
    <string name="fabricdetails">FabricDetails</string>
    <string name="product_measurement_on_image">Product Measurement On Image</string>
    <string name="today">اليوم</string>
    <string name="add_to_basket">أضف الي السلة</string>
    <string name="send">إرسال</string>
    <string name="type_notification_content">اكتب محتوى الإخطار</string>
    <string name="medium">M</string>
    <string name="small" translatable="false">S</string>
    <string name="large" translatable="false">L</string>
    <string name="xlarge" translatable="false">XL</string>
    <string name="xxlarge" translatable="false">XXL</string>
    <string name="product_size">Product Size*</string>
    <string name="product_chest">Product Chest*</string>
    <string name="product_waist">Product Waist*</string>
    <string name="product_hips">Product Hips*</string>
    <string name="forget_password_info">الرجاء إدخال عنوان البريد الإلكتروني الخاص بك. سوف تتلقى رابطًا لإنشاء كلمة مرور جديدة عبر البريد الإلكتروني.</string>
    <string name="add_to_favorite">تمت الإضافة إلى قائمة المفضلة</string>
    <string name="removed_from_favorite">تمت إزالته من قائمة المفضلة</string>
    <string name="delete_favorite_title">حذف من المفضلة</string>
    <string name="delete_favorite_message">هل أنت متأكد من الحذف من قائمة المفضلة؟</string>
    <string name="added_to_basket">تمت الإضافة إلى السلة</string>
    <string name="choose_size">Choose Produxt Size</string>
    <string name="your_favorite_is_empty">المفضلة لديك فارغة</string>
    <string name="add_favorite">أضف مفضلات</string>
    <string name="Account">حساب</string>
    <string name="log_out">تسجيل خروج</string>
    <string name="about_us">معلومات عنا</string>
    <string name="agreements">الاتفاقيات</string>
    <string name="rate_us">قيمنا</string>
    <string name="share_app">شارك التطبيق</string>
    <string name="registered_addresses">العناوين المسجلة</string>
    <string name="myorders">طلباتي</string>
    <string name="share_using">شارك باستخدام</string>
    <string name="easy_shopping">تسوق أسهل</string>
    <string name="saveChanges">حفظ التغييرات</string>
    <string name="all_fields_required">جميع الحقول مطلوبة</string>
    <string name="please_wait">انتظر من فضلك</string>
    <string name="changes_saved_successfuly">التغييرات التي تم حفظها بنجاح</string>
    <string name="upload_in_progress">التحميل قيد التقدم</string>
    <string name="saving_Image">جارٍ حفظ الصورة</string>
    <string name="no_image_selected">لم يتم تحديد صورة</string>
    <string name="permission">الإذن</string>
    <string name="Please_accept_permissions">الرجاء قبول الأذونات</string>
    <string name="your_basket_is_empty">سلتك فارغة</string>
    <string name="delete_basket_title">حذف من السلة</string>
    <string name="delete_basket_message">هل أنت متأكد من الحذف من قائمة السلة؟</string>
    <string name="total">مجموع</string>
    <string name="secure_payment">دفع امن</string>
    <string name="Address">العنوان</string>
    <string name="fetching">جلب البيانات</string>
    <string name="address_is_empty">العناوين فارغة</string>
    <string name="address_title_is_empty">عنوان العنوان فارغ</string>
    <string name="postal_code_is_empty">الرمز البريدي فارغ</string>
    <string name="area_is_empty">المنطقة فارغة</string>
    <string name="country_is_empty">البلد فارغ</string>
    <string name="address_added">تمت إضافة العنوان</string>
    <string name="city_is_empty">المدينة فارغة</string>
    <string name="AddAddress">اضف عنوان</string>
    <string name="delete_address_title">حذف العنوان</string>
    <string name="delete_address_message">تأكد من حذف العنوان</string>
    <string name="contactUs">معلومات عنا</string>
    <string name="msgWhatsappNotInstall">Whatsapp غير مثبت</string>
    <string name="guest">ضيف</string>
    <string name="there_is_no_subcategory">لا توجد فئة فرعية</string>
    <string name="checkout">تأكيد الحجز</string>
    <string name="subtotal">المجموع الفرعي</string>
    <string name="add_address">اضف عنوان</string>
    <string name="change">يتغيرون</string>
    <string name="choose_address">اختر العنوان</string>
    <string name="order_placed">تم تقديم الطلب بنجاح</string>
    <string name="orders">الطلبات</string>
    <string name="shipment_no">رقم الشحنة</string>
    <string name="order_date">تاريخ الطلب</string>
    <string name="status">الحالة</string>
    <string name="view_order_details">معاينة تفاصيل الطلب</string>
    <string name="preparing_item">تحضير العنصر</string>
    <string name="item_shipped">تم شحن العنصر</string>
    <string name="delivered">تم التوصيل</string>
    <string name="order_canceled">تم إلغاء الطلب</string>
    <string name="there_is_no_orders">لا توجد أوامر</string>
    <string name="add_orders">إضافة أوامر</string>
    <string name="max_address">يجب أن يكون الحد الأقصى للعنوان 3</string>
    <string name="empty_result">لايوجد بيانات!</string>
    <string name="privacy">سياسة خاصة</string>
    <string name="privacy_url">https://docs.google.com/document/d/1pfm5xgtbXW4Twxbh_8Q_3-75QoO5KySZkysli3zE0gI/edit?usp=sharing</string>
    <string name="permission_not_granted">لم يتم منح الإذن</string>
    <string name="failed">باءت بالفشل</string>
    <string name="agreementsEn">Faild</string>
    <string name="choose_age">Choose Age</string>
    <string name="new_message">رسالة جديدة</string>
    <string name="start_shopping_now">ابدأ التسوق الآن</string>
    <string name="login">يسجل دخول</string>
    <string name="start">بداية</string>
    <string name="skip">تخطى</string>
    <string name="tTitle">اسرع استلام</string>
    <string name="tBody">اوصل لأقرب فرع لأستلام الهاتف.</string>
    <string name="fTitle">تسوق سهل</string>
    <string name="fBody">اختر من بين العديد من الاجهزة بمختلف الانواع.</string>
    <string name="sTitle">سهل</string>
    <string name="sBody">احجز هاتفك من المنزل.</string>
    <string name="offers">عروض</string>
    <string name="installment">تقسيط</string>
    <string name="username_hint">اسم االمستخدم</string>
    <string name="next">التالي</string>
    <string name="loading_holder">جار التحميل</string>
    <string name="tablets">أجهزة لوحية</string>
    <string name="mobile">جوالات</string>
    <string name="accessories">اكسسوارات</string>
    <string name="there_is_no_category">لا توجد فئة</string>
    <string name="there_is_no_offers">لا توجد عروض</string>
    <string name="description">وصف:</string>
    <string name="book_now">احجز الآن</string>
    <string name="Name">الأسم</string>
    <string name="PhoneNumber">رقم الهاتف</string>
    <string name="Password">الرقم السري</string>
    <string name="ConfirmPassword">تأكيد الرقم السري</string>
    <string name="termsAcceptanceText">عند النقر فوق زر التسجيل ، فإننا نعتبر أنك تقبل</string>
    <string name="TermsAndConditions">الأحكام والشروط</string>
    <string name="slogan">لخدمات المحمول</string>
    <string name="currency">ج</string>
    <string name="confirmBooking">تأكيد الحجز</string>
    <string name="placeOrder">إنشاء الطلب</string>
    <string name="Egypt">مصر</string>
    <string name="Country">البلد</string>
    <string name="SaveAndContinue">حفظ و استمرار</string>
    <string name="AddressTitle">عنوان العنوان(المنزل , مكان العمل)</string>
    <string name="City">المحافظة</string>
    <string name="PostalCode">رمز بريدي</string>
    <string name="Area">المنطقة</string>
    <string name="shoppingNow">تسوق الان</string>
    <string name="more">المزيد</string>
    <string name="myNotification">الاشعارات</string>
    <string name="there_is_no_notification">لا توجد تنبيهات</string>
    <string name="installment_enquiry">الأستعلام عن قسط:</string>
    <string name="sign_in_with_email">تسجيل عن طريق الايميل</string>
    <string name="welcome">مرحبا</string>
    <string name="subWelcome">سجل الدخول لعرض طلباتك و مزايا اخري</string>
    <string name="loginOrSignup">تسجيل / تسجيل دخول</string>
    <string name="location">موقعنا</string>
    <string name="edit_account">تعديل البيانات</string>
    <string name="sign_in_with_google">عن طريق جوجل</string>
    <string name="sign_in_with_facebook">عن طريق فيسبوك</string>
    <string name="resetPassword">طلب تغيير كلمة المرور</string>
    <string name="product_unavailable">المنتج غير متوفر حاليا</string>
    <string name="add_phone">قم بأضافة رقم التلفون للتمكن من استكمال الشراء</string>
</resources>