<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activity.Auth.ResetActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/blackLightColor"
        android:textStyle="bold"
        android:fontFamily="@font/cairo"
        android:text="@string/forget_your_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/blackLightColor"
        android:gravity="center"
        android:fontFamily="@font/cairo"
        android:text="@string/forget_password_info"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textColorHint="@color/grey"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:fontFamily="@font/cairo"
        android:hint="@string/email"
        android:autofillHints="@string/email" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/send"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        app:tint="@color/white" />


</LinearLayout>