<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:background="@color/white"
    tools:context=".Activity.AddAddress">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddAddress"
            android:textSize="20sp"
            android:fontFamily="@font/cairo"
            android:textColor="@color/black"
            android:padding="15dp"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/AddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/cairo"
                android:hint="@string/AddressTitle"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/Address"
                android:textColorHint="@color/grey"
                android:fontFamily="@font/cairo"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/cairo"
                        android:text="@string/Country"/>
                    <EditText
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="City"
                        android:text="@string/Egypt"
                        android:inputType="none"
                        android:textColorHint="@color/grey"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/cairo"
                        android:text="@string/City"/>
                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/City"
                        android:textColorHint="@color/grey"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Area"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/Area"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/cairo"
                    android:textColor="@color/black"/>
                <EditText
                    android:visibility="gone"
                    android:id="@+id/PostalCode"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:inputType="number"
                    android:hint="@string/PostalCode"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/cairo"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:fontFamily="@font/cairo"
        android:background="@drawable/rounded_button"
        android:text="@string/SaveAndContinue"/>
</RelativeLayout>