<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textSize="20sp"
            android:fontFamily="@font/cairo"
            android:textColor="@color/black"
            android:padding="15dp"/>
    </LinearLayout>



    <TextView
        android:id="@+id/AddressTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/cairo"
        android:text="@string/Address"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postrecyclerview"
        android:layout_below="@+id/AddressTxt"
        android:layout_above="@+id/paymentLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/progressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/cairo"
            android:text="@string/address_is_empty"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/addAddress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="21dp"
            app:cardBackgroundColor="@color/main_blue"
            android:background="?android:selectableItemBackground"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:fontFamily="@font/cairo"
                android:text="@string/AddAddress"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/paymentLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"/>
        <LinearLayout
            android:id="@+id/priceLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/cairo"
                android:layout_marginTop="15dp"
                android:text="@string/total"/>
            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textColor="@color/main_blue" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/securePayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/main_blue"
            android:layout_weight="1"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            android:background="?android:selectableItemBackground"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/cairo"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:layout_gravity="center"
                android:text="@string/placeOrder"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>